external-crates/move/crates/move-compiler/tests/move_check/warning_suppression/conflict_deny_allow_all.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E10008]: ambiguous attribute value
  ┌─ tests/move_check/warning_suppression/conflict_deny_allow_all.move:2:8
  │
2 │ #[deny(all)]
  │        ^^^ Conflicting filter for 'all' specified in the same attribute
3 │ #[allow(all)]
  │         --- Conflicting filter for 'all' specified here
